--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     grid-row: 1 / 3;
     padding-left: 1vw;
     padding-top: 2vh;
-    background-color: var(--black);
+    background-color: var(--white);
     font-size: 1vw;
 }
 
@@ -60,7 +60,7 @@
     gap: 25px;   
 }
 
-.sidebar-middle img, .sidebar-bottom img {
+.icon {
     height: 3vh;
     width: 3vw;
 }
@@ -71,20 +71,95 @@
 }
 
 .sidebar-middle div:hover, .sidebar-bottom div:hover {
-    color: var(--dark-lavender);
+    color: var(--pink-purple);
     cursor: pointer;
 }
 
 .header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    background-color: var(--dark-purple);
+    background-color: var(--light-lavender);
     display: grid;
     grid-auto-flow: auto;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.htop-left {
+    display: flex;
+}
+
+.header-search {
+    width: 35vw;
+    height: 2vh;
+    border-radius: 1em;
+    border-style: none;
+    padding: 5px;
+}
+
+.htop-right{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.htop-right p {
+    font-family: Orbitron;
+    font-size: .7vw;
+}
+
+.header-profile-pic {
+    height: 4vh;
+    border-radius: 50%;
+}
+
+.header-bottom {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.hbottom-left {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+}
+
+.hbottom-profilepic {
+    border-radius: 50%;
+    height: 8vh;
+}
+
+.welcome {
+    display: grid;
+    font-family: Orbitron;
+    font-weight: 500;
+}
+
+.profile-name {
+    font-size: 1.5em;
+}
+
+.hbottom-right {
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+}
+
+.hbottom-right button {
+    width: 5vw;
+    height: 3vh;
+    border-radius: 25px;
+    border-style: none;
+    font-family: Orbitron;
+    font-size: .9em;
 }
 
 .content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    background-color: var(--darker-lavender)
+    background-color: var(--white-purple)
 }
