--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@
 
 .htop-right p {
     font-family: Orbitron;
-    font-size: .7vw;
+    font-size: 1vw;
+    font-weight: 800;
 }
 
 .header-profile-pic {
@@ -179,9 +180,9 @@
 }
 
 .content-left-heading, .announcements-header {
-    margin:.5rem;
+    margin:1.5rem;
     font-family: Orbitron;
-    font-size: .8vw;
+    font-size: .6vw;
 }
 
 .card {
@@ -222,11 +223,68 @@
     font-family: Orbitron;
     background-color: var(--white-purple);
     display: grid;
+    grid-template-rows: 40vh 40vh;
 }
 
 .announcements-container {
     display: grid;
-    grid-template-rows: 8% repeat(3, 10%);
-    background-color: #9333ea;
+    grid-template-rows: 10% 60%;
+    border: black;
+    padding-right: 2em;
+    row-gap: 20px;
 }
+
+.announcements-child-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    justify-self: center;
+    align-content: center;
+    background-color: var(--white);
+    width: 65%;
+    height: 85%;
+    padding: 2em;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px -2px rgb(0, 0, 0);
+}
+
+.top-child, .middle-child {
+    box-shadow: 0px 2px 3px -2px rgb(110, 110, 110);
+    position: relative;
+}
+
+.top-child, .middle-child, .bottom-child {
+    padding: .3em;
+}
+
+.trending-pic {
+    background-position: center;
+    height: 4em;
+    width: 4em;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.trending-container {
+    padding-right: 2em;
+    width: 65%;
+}
+
+.trending {
+    background-color: var(--white);
+    padding: 2em;
+    justify-self: center;
+    align-content: center;
+    border-radius: 10px;
+}
+
+.profile-trending {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    align-content: center;
+    justify-content: flex-start;
+}
+
 
